--- a/runtime/svcomp32/Makefile.cmake.bitcode
+++ b/runtime/svcomp32/Makefile.cmake.bitcode
@@ -6,15 +6,17 @@
 # License. See LICENSE.TXT for details.
 #
 #===------------------------------------------------------------------------===#
-LEVEL := ./
+LEVEL := ../
+
 include $(LEVEL)/Makefile.cmake.bitcode.config
 
-DIRS += Intrinsic
-DIRS += klee-libc
-DIRS += svcomp64
-DIRS += svcomp32
-ifneq ($(ENABLE_POSIX_RUNTIME),0)
-	DIRS += POSIX
+LLVMCC.Flags += -fno-builtin -m32
+
+# FIXME: This is a horrible hack
+ifeq ($(USE_MODULE_INSTEAD_OF_BCA),1)
+	MODULE_NAME=kleeSVCOMPRuntime32
+else
+	ARCHIVE_NAME=kleeSVCOMPRuntime32
 endif
 
 include $(LEVEL)/Makefile.cmake.bitcode.rules
